--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,20 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+  
+  neo4j:
+    image: neo4j:latest
+    container_name: neo4j
+    ports:
+      - "7687:7687"
+      - "13274:13274"
+    environment:
+      NEO4J_AUTH: neo4j/neo4j
+      NEO4J_ACCEPT_LICENSE_AGREEMENT: "yes"
+    volumes:
+      - neo4j-data:/data
 
 volumes:
   postgres_data:
+  
+  neo4j-data:
