--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,13 +19,14 @@ services:
     ports:
       - "7687:7687"
       - "13274:13274"
+      - "7474:7474"
     environment:
-      NEO4J_AUTH: neo4j/neo4j
+      NEO4J_AUTH: neo4j/12345678
       NEO4J_ACCEPT_LICENSE_AGREEMENT: "yes"
     volumes:
-      - neo4j-data:/data
+      - neo4j:/data
 
 volumes:
   postgres_data:
   
-  neo4j-data:
+  neo4j:
